set up webpack-dev-server, edited some HTML & SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
     <script src="main.js"></script>
     <title>Metrolink Simulator</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <p>Metrolink Simulator</p>
+      <a href="https://github.com/qw1889qw/metrolink-simulator" rel="external">link to GitHub</a>
+    </header>
     <main>
       <h1>Metrolink Simulator</h1>
     </main>
