more HTML & SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,18 @@
       <a href="https://github.com/qw1889qw/metrolink-simulator" rel="external">link to GitHub</a>
     </header>
     <main>
-      <h1>Metrolink Simulator</h1>
+      <article>
+        <h1>Metrolink Simulator</h1>
+        <p class="description">thinking of the good old days when i would take Metrolink up to LA. here you can experience what it’s like to take the Orange County Line from Oceanside to LA starting at 6:34am on a Monday. all aboard and have a nice trip!</p>
+        <div class="select-js-method">
+          <p>choose a method of simulation:</p>
+          <div class="buttons">
+            <button>callback hell</button>
+            <button>Promises</button>
+            <button>async/await</button>
+          </div>
+        </div>
+      </article>
     </main>
   </body>
 </html>
