--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>Metrolink Simulator</title>
   </head>
   <body>
+    <noscript>you need to have JS enabled to use this app</noscript>
     <header>
       <p>Metrolink Simulator</p>
       <a href="https://github.com/qw1889qw/metrolink-simulator" rel="external">link to GitHub</a>
@@ -16,13 +17,13 @@
     <main>
       <article>
         <h1>Metrolink Simulator</h1>
-        <p class="description">thinking of the good old days when i would take Metrolink up to LA. here you can experience what it’s like to take the Orange County Line from Oceanside to LA starting at 6:34am on a Monday. all aboard and have a nice trip!</p>
+        <p class="description">thinking about the good old days when i would take Metrolink up to LA. here you can experience what it’s like to take the Orange County Line from Oceanside to LA starting at 6:34am on a Monday. all aboard and have a nice trip!</p>
         <div class="select-js-method">
           <p>choose a method of simulation:</p>
           <div class="buttons">
-            <button>callback hell</button>
-            <button>Promises</button>
-            <button>async/await</button>
+            <button class="button button--bad">callback hell</button>
+            <button class="button button--better">Promises</button>
+            <button class="button button--better">async/await</button>
           </div>
         </div>
       </article>
