--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
-    <script src="main.js"></script>
     <title>Metrolink Simulator</title>
   </head>
   <body>
@@ -26,7 +25,9 @@
             <button class="button button--better">async/await</button>
           </div>
         </div>
+        <img class="oc-line-map">
       </article>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
