finished basic layout for mobile devices

--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,23 @@
     <main>
       <article>
         <h1>Metrolink Simulator</h1>
-        <p class="description">thinking about the good old days when i would take Metrolink up to LA. here you can experience what it’s like to take the Orange County Line from Oceanside to LA starting at 6:34am on a Monday. all aboard and have a nice trip!</p>
+        <p class="description">thinking about the good old days when i would take Metrolink up to LA. here you can experience what it’s like to take the Orange County Line from Oceanside to LA starting at 6:34am on a Monday. messages will show up in the box near the bottom of this page. all aboard and have a nice trip!</p>
         <div class="select-js-method">
-          <p>choose a method of simulation:</p>
-          <div class="buttons">
+          <p>choose a method of simulation, then click start:</p>
+          <div class="js-method-buttons">
             <button class="button button--bad">callback hell</button>
             <button class="button button--better">Promises</button>
             <button class="button button--better">async/await</button>
           </div>
+          <button class="button">start!</button>
         </div>
         <img class="oc-line-map">
+        <div class="messages">
+          <p>train status:</p>
+        </div>
       </article>
     </main>
+    <footer>made by qw1889qw (dee&lt;3)</footer>
     <script src="main.js"></script>
   </body>
 </html>
