added styles for desktop, fixed some general styling, edited webpack entry point file

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Metrolink simulator">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
     <title>Metrolink Simulator</title>
@@ -24,9 +25,11 @@
             <button class="button button--better">Promises</button>
             <button class="button button--better">async/await</button>
           </div>
-          <button class="button">start!</button>
         </div>
-        <img class="oc-line-map">
+        <div class="initiate">
+          <button class="button button--start">start!</button>
+        </div>
+        <div class="map-container"></div>
         <div class="messages">
           <p>train status:</p>
         </div>
