added text to HTML file, fixed Babel regeneratorRuntime issue & fixed some riding.js logic

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="map-container"></div>
         <div class="messages">
-          <p>train status:</p>
+          <p>train status (note: this train will not stop at San Clemente Pier):</p>
         </div>
       </article>
     </main>
