added button that lets you restart

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,8 @@
         </div>
         <div class="map-container"></div>
         <div class="messages">
-          <p>train status (note: this train will not stop at San Clemente Pier):</p>
+          <p>train status (will not stop at San Clemente Pier):</p>
+          <button class="button button--restart unclickable">go back to Oceanside & ride again?</button>
         </div>
       </article>
     </main>
