--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url=src/index.html">
+    <meta http-equiv="refresh" content="0; url=dist/index.html">
     <title>Metrolink Simulator</title>
   </head>
 </html>
